Changes to H2 size on mobile && added from-content-api class to fix bullet points

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -81,13 +81,18 @@ a, .u-fauxlink {
     }
 
     & > h2 {
-    	font-family: "Guardian Egyptian Web", Georgia;
+    	font-family: "Guardian Headline", "Guardian Egyptian Web", Georgia;
     	font-size: 36px;
     	line-height: 42px;
     	font-weight: 700;
     	color: #333;
     	margin-top: 36px;
     	margin-bottom: 6px;
+
+      @include mq($until: desktop) {
+        font-size: 24px;
+        line-height: 28px;
+      }
     }
 
     .element--immersive {
@@ -146,6 +151,21 @@ a, .u-fauxlink {
   }
 
 }
+
+// .content__main-column li, .content__main-column ul {
+//     list-style: none;
+// }
+
+// .content__main-column li:before {
+//   display: inline-block;
+//   content: '';
+//   -webkit-border-radius: 0.375rem;
+//   border-radius: 0.375rem;
+//   height: 0.75rem;
+//   width: 0.75rem;
+//   margin-right: 0.25rem;
+//   background-color: #bdbdbd;
+// }
 
 .prose blockquote.quoted::before {
   display: none;
